force-app/main/default/objects/TrainingInvoiceLineItem__c/TrainingInvoiceLineItem__c.object-meta.xml
<CustomObject>
    <label>Training Invoice Line Item</label>
    <nameField>
        <displayFormat>INVL-{000000}</displayFormat>
        <label>Training Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>