force-app/main/default/objects/TrainingInvoiceLineItem__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>TrainingInvoice__c</referenceTo>
    <relationshipLabel>Training Invoice Line Items</relationshipLabel>
    <relationshipName>TrainingInvoiceLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>