force-app/main/default/objects/TrainingInvoiceLineItem__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>Price of the invoice line item, including taxes, based on the price of the corresponding training line item.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>