force-app/main/default/objects/TrainingInvoiceLineItem__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <inlineHelpText>Isolated tax amount based on the tax value of the corresponding training line item.</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>