force-app/main/default/objects/TrainingInvoiceLineItem__c/fields/TrainingProduct__c.field-meta.xml
<CustomField>
    <fullName>TrainingProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Product</label>
    <referenceTo>TrainingProduct__c</referenceTo>
    <relationshipLabel>Training Invoice Line Items</relationshipLabel>
    <relationshipName>TrainingInvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>