force-app/main/default/objects/TrainingInvoiceLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>TrainingProduct__c</columns>
    <columns>Price__c</columns>
    <columns>Tax__c</columns>
    <columns>ProductCode__c</columns>
    <columns>LineDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>